# openaws

./: .gitignore  INTEGRATIONS.md  INTEROP.md  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
examples/: help.txt
openaws/: __init__.py  __main__.py  apigateway.py  cli.py  cloudwatch.py  cognito.py  connect.py  dynamodb.py  errors.py  eventbridge.py  iam.py  kinesis.py  kms.py  lambdas.py  s3.py  secretsmanager.py  server.py  ses.py  sns.py  sqs.py  ssm.py  stepfunctions.py  storage.py  sts.py
tests/: conftest.py  test_apigateway.py  test_cli.py  test_cloudwatch.py  test_cognito.py  test_connect.py  test_dynamodb.py  test_dynamodb_extended.py  test_eventbridge.py  test_iam.py  test_kinesis.py  test_kms.py  test_lambda.py  test_lambda_extended.py  test_persistence.py  test_s3.py  test_s3_extended.py  test_secretsmanager.py  test_server_http.py  test_ses.py  test_sns.py  test_sqs.py  test_sqs_extended.py  test_ssm.py  test_stepfunctions.py  test_sts.py
