[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openaws"
version = "0.1.1"
description = "An independent, open-source LOCAL reimplementation of core AWS-style primitives (S3, DynamoDB, SQS, Lambda) for offline development and testing."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Cognis Digital", email = "engineering@cognisdigital.com" }]
keywords = ["aws", "localstack", "s3", "dynamodb", "sqs", "lambda", "emulator", "local-development", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/cognis-digital/openaws"
Repository = "https://github.com/cognis-digital/openaws"

[project.scripts]
"openaws-emit" = "openaws.connect:emit_main"
openaws = "openaws.cli:main"

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["openaws"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
